# hausKI-audio

./: .ai-context.yml  .editorconfig  .env.example  .gitignore  .hauski-reports  .yamllint  Cargo.toml  Justfile  README.md  push.err  pyproject.toml  sichter-reports
.github/: dependabot.yml  grabowski-required-checks.json
.github/workflows/: ai-context-guard.yml  claude.yml  contracts-validate.yml  docs-ci.yml  heimgewebe-command-dispatch.yml  metrics.yml  pr-heimgewebe-commands.yml  rust-ci.yml  secret-scan-gitleaks.yml  validate-audio-events.yml  wgx-guard.yml
.wgx/: profile.yml
contracts/: audio.events.schema.json
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  discover.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  mopidy.rs  scripts.rs  validation.rs
crates/backend/src/scripts/: constants.rs  mod.rs  runner.rs
crates/backend/tests/: discover.rs  http.rs  validation.rs
docs/: ARCHITECTURE.md  README_ALSA.md  io-contracts.md  troubleshooting.md  vibe-detection.md
docs/adr/: 0001-player-backend-mopidy-qobuz.md  0002-audio-path-pulse-vs-alsa.md  0003-repo-standards-docs-ci.md  0004-recording-pw-record-helper.md  README.md
docs/process/: CONTRIBUTING.md
docs/runbooks/: backend_service.md  mopidy_iris_qobuz.md
export/: audio.events.jsonl
heimgewebe-.ai-context.yml-sammlung/: aussensensor.ai-context.yml  chronik.ai-context.yml  contracts.ai-context.yml  heimlern.ai-context.yml  leitstand.ai-context.yml  metarepo.ai-context.yml  mitschreiber.ai-context.yml  mitschreiber.yml  semantah.ai-context.yml  vault-gewebe.ai-context.yml  vault-gewebe.yml  wgx.ai-context.yml
merges/: hausKI-audio_merge_2510262237__.wgx.md  hausKI-audio_merge_2510262237__crates_backend_tests.md  hausKI-audio_merge_2510262237__docs_adr.md  hausKI-audio_merge_2510262237__docs_policies.md  hausKI-audio_merge_2510262237__docs_runbooks.md  hausKI-audio_merge_2510262237__index.md  hausKI-audio_merge_2510262238__.github_workflows.md  hausKI-audio_merge_2510262238__crates_backend.md  hausKI-audio_merge_2510262238__crates_backend_src.md  hausKI-audio_merge_2510262238__docs.md  hausKI-audio_merge_2510262238__docs_process.md  hausKI-audio_merge_2510262238__index.md  hausKI-audio_merge_2510262238__merges.md  hausKI-audio_merge_2510262238__root.md  hausKI-audio_merge_2510262238__scripts.md  hausKI-audio_merge_2510262238__tests.md  hausKI-audio_merge_2510262238__tools_systemd.md
scripts/: README.md  audio-mode  bootstrap.sh  emit-audio-event.sh  playlist-from-list  rec-start  rec-stop  wgx-metrics-snapshot.sh
scripts/ai_context/: README.md  validate_ai_context.py
tests/: test_audio_mode.py  test_rec_scripts.py
tools/systemd/: hauski-backend.service
