[project]
name = "hauski-audio"
version = "0.1.0"
description = "HausKI Audio Layer – MOTU, Lake, Qobuz, Local Sound Stack"
authors = [{ name = "Alexander Mohr", email = "alexdermohr@gmail.com" }]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Minimal-Konfig – reicht, um CI-Assertion zu erfüllen
index-url = "https://pypi.org/simple"
python-preference = "system"
